--- a/style.css/style.css
+++ b/style.css/style.css
@@ -135,9 +135,15 @@
   /* navigation bar */
   /* Banner */
   .banner-container{
-    grid-template-columns: 650px 1fr;
+    /* grid-template-columns: 650px 1fr;
     align-items: center;
-    gap: 70px;
+    gap: 70px; */
+    display: flex;
+    gap: 100px;
+    align-items: center;
+  }
+  .banner-info{
+    max-width: 650px;
   }
 
   .banner-title{
@@ -145,7 +151,7 @@
     margin-bottom: 20px;
   }
   .banner-dis{
-    font-size:1.4px;
+    font-size:1.4rem;
     margin-bottom: 24px;
   }
   /* Main part of page/
@@ -163,14 +169,16 @@
   }
 
   .card-holder{
-    grid-template-columns: repeat(3, 370px);
+    /* grid-template-columns: repeat(3, 370px);
+    gap: 30px; */
+    display: flex;
     gap: 30px;
   }
   .card{
     background: linear-gradient(to bottom , #DEF5FF, white, white, white );
     max-height: 480px;
-    
     padding: 40px;
+    /* max-width: 300px; */
     border: none;
     border-radius: 18px;
     box-shadow: 0px 5px 30px gray;
@@ -333,6 +341,7 @@
     padding: 123px 230px 174px 140px;
     background-color: #01ACFD;
     color: white;
+    margin-top: -20px;
     /* position: relative;
     top: -20px; */
   }
@@ -343,7 +352,8 @@
     
   }
   .education{
-    max-width: 400px;
+    /* max-width: 400px; */
+    
   }
   .box-holder{
     display: flex;
@@ -357,6 +367,8 @@
     
   }
   .box .education-logo{
+    position: relative;
+    top: 10px;
     width: 100%;
     height: 80px;
     text-align: start;
@@ -374,9 +386,13 @@
     margin-top: 0;
     margin-bottom: 32px;
   }
+  .menus{
+    padding:0;
+  }
   .footer-menu .menus li{
     list-style: none;
     margin-bottom: 20px;
+    
   }
   .keep-touch h1{
     font-size: 1.9rem;
@@ -388,6 +404,7 @@
     gap: 10px;
   }
   .logos img{
+
     max-width: 40px;
     border-radius: 0px;
     color: white;
@@ -424,19 +441,60 @@
    }
 
    .banner-container{
-    grid-template-columns: repeat(1, 1fr);
+    flex-direction: column-reverse;
+    gap: 20px;
     text-align: center;
+    max-width: 100vw;
+   }
+   .banner-info .banner-title{
+    font-size: 3rem;
+    margin-top: 10px;
+   }
+   .banner-dis{
     
    }
    .side-img{
     width: 100%;
-    grid-column: 2/1;
+    
    }
    .side-img img{
-    width: 100%;
+    width: 90%;
    }
    .card-holder{
-    grid-template-columns: repeat(1 , 1fr);
+    flex-direction: column;
    }
+   .curriculum{
+    margin: 0 5px;
+   }
+   .arrow{
+    display: none;
+   }
+   
+   .main-story{
+    display: none;
+   }
+   .our-stories{
+    margin: 0;
+    padding: 50px;
+   }
+    .stories{
+      grid-template-columns: repeat(2, 1fr);
+      grid-template-rows: repeat(2, 1fr);
+    }
+  .story-btn{
+    padding: 10px 15px;
+  }
+  .story-title{
+    font-size: 1rem;
+  }
+  footer{
+    padding: 0px;
+  }
+  .footer-container{
+    grid-template-columns: repeat(1, 1fr);
+  }
+    
+   }
+   
   
-  } 
+   
